cgrates (0.10.1~dev) UNRELEASED; urgency=medium

  * [FilterS] Removed rals_conns in favor of reading the account
    directly from DataDB
  * [SessionS] Added check for missing CGRevent
  * [DiameterAgent] Using String function from diam.Message instead of
    ToJSON for request String method
  * [DiameterAgent] Updated 3gp_vendor dictionary
  * [Templates] Added new dataconvertor: *ip2hex
  * [AgentRequest] Add support for *group type and correctly overwrite
    the values in case of *variable
  * [EventReader] Correctly populate ConcurrentRequest from config in
    EventReader
  * [SupplierS] In case of missing usage from Event use 1 minute as
    default value
  * [DataDB] Mongo support different marshaler than msgpack
  * [General] Fix rpc_conns handling id with two connections and one of
    it *internal
  * [Replicator] Add Limit and StaticTTL otions for Items from
    DataDB/StorDB

 -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 15:22:59 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100